save (#1)
* :sparkles: add sort for mongodb

* :sparkles: save
